# Hotpass-Win64

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  DOCS_PARITY_CHANGESET.md  DOCUMENTATION_UPDATE_SUMMARY.md  Dockerfile  Dockerfile.dev  Dockerfile.operator  FINAL_RELEASE_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETION_REPORT.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  Makefile  Next_Steps.md  Next_Steps_Log.md  README.md  RELEASE_READINESS_REPORT.md  ROADMAP.md  SECURITY.md  TASK_COMMIT_MAPPING.md  UPGRADE.md  biome.json  catalog-info.yaml  coverage.xml  package-lock.json  pyproject.toml  renovate.json  scancode-sample.json  sitecustomize.py  tools.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/workflows/: arc-ephemeral-runner.yml  ci-smoke.yml  codeql.yml  commitlint.yml  copilot-setup-steps.yml  docker-cache.yml  docs-refresh.yml  docs.yml  mypy-audit.yml  playwright-nightly.yml  prefect-deployments.yml  process-data.yml  quality-gates.yml  regenerate-lockfiles-windows.yml  release-drafter.yml  release-security-reports.yml  secret-scanning.yml  security-scan-clean.yml  security-scan.yml  self-hosted-smoke.yml  trunk-fast.yml  trunk-format.yml  validate-workflows.yml  zap-baseline.yml
.hotpass/research_runs/: example-flight-school-20251031T005712Z.json  example-research-org-20251031T005745Z.json  qg-research-org-20251031T005149Z.json  qg-research-org-20251031T005454Z.json  qg-research-org-20251031T005706Z.json  unknown-entity-20251031T005149Z.json  unknown-entity-20251031T005454Z.json  unknown-entity-20251031T005706Z.json  unknown-entity-20251031T005712Z.json  unknown-entity-20251031T005745Z.json
.trunk/: trunk.yaml
LICENSES/: Apache-2.0.txt  COMMERCIAL-LICENSE.md
apps/web-ui/: .gitignore  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  TEST_PLAN.md  WEBUI  eslint.config.js  pa11y.ci.json  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
contracts/: hotpass-cli-contract.yaml
data/: Contact Database.xlsx  Reachout Database.xlsx
data/compliance/: verification-log.json
data/e2e/: Reachout Database.xlsx
data/inventory/: feature-status.yaml
data/pyside-ui/: enrich.json  qa.json  refine.json
data_expectations/checkpoints/: contact_capture.json  contact_company_addresses.json  contact_company_cat.json  contact_company_contacts.json  reachout_contact_info.json  reachout_organisation.json  sacaa_cleaned.json
data_expectations/contact/: capture.json  company_addresses.json  company_cat.json  company_contacts.json
data_expectations/reachout/: contact_info.json  organisation.json
data_expectations/sacaa/: cleaned.json
data_expectations/suites/: contact_capture.json  contact_company_addresses.json  contact_company_cat.json  contact_company_contacts.json  reachout_contact_info.json  reachout_organisation.json  sacaa_cleaned.json
deploy/docker/: docker-compose.yml
docs/: CHANGELOG.md  DOCUMENTATION_AUDIT_2025-11-02.md  DOCUMENTATION_AUDIT_2025-11-18.md  README.md  agent-instructions.md  conf.py  index.md  roadmap.md  style.md
docs/adr/: 0003-data-contracts.md  0006-mlflow-lifecycle-strategy.md  index.md
docs/architecture/: cli-expansion-plan.md  documentation-architecture.md  fitness-functions.md  repo-restructure-plan.md  resilience-plan.md
docs/compliance/: evidence-catalog.md  index.md  presidio-redaction.md  remediation-backlog.md  verification-plan.md
docs/delivery/: release-checklist-2025-11-03.md
docs/devex/: backstage-mvp.md  baseline.md  experiments.md  review-loop.md
docs/diagrams/: README.md  data-flow.mmd  run-lifecycle.mmd  system-architecture.mmd
docs/engineering/: testing.md
docs/explanations/: architecture.md  data-quality-strategy.md  developer-hub.md  index.md  platform-scope.md
docs/governance/: audit-baseline.md  data-governance-navigation.md  gap-analysis.md  pr-playbook.md  project-charter.md  secrets-management.md  supplier-risk-register.md  upgrade-final-report.md
docs/how-to-guides/: agentic-orchestration.md  assert-free-pytest.md  bootstrap-execute-mode.md  configure-pipeline.md  copilot-usage.md  dependency-profiles.md  e2e-walkthrough.md  format-and-validate.md  incident-response.md  index.md  manage-arc-runners.md  manage-data-versions.md  manage-prefect-deployments.md  model-lifecycle-mlflow.md  operator-runbook.md  orchestrate-and-observe.md  qa-checklist.md  read-data-docs.md  run-a-backfill.md  secure-web-auth.md  self-hosted-stack.md  setup-wizard.md  toolchain-setup.md  windows-migration.md
docs/lineage/: LAST_REFRESH.txt  marquez-bootstrap-smoke-2025-11-17.md
ops/: benchmark_pipeline.py  migrate_profile.py
schemas/: contact_capture.schema.json  contact_company_addresses.schema.json  contact_company_cat.schema.json  contact_company_contacts.schema.json  reachout_contact_info.schema.json  reachout_organisation.schema.json  sacaa_cleaned.schema.json  ssot.schema.json
scripts/: docs_refresh.py  regen_lockfiles.ps1  verify_docs.py
tests/: _telemetry_stubs.py  conftest.py  test_acquisition_guardrails.py  test_agentic_orchestration.py  test_aws_endpoints.py  test_benchmarks_unit.py  test_bootstrap.py  test_column_mapping.py  test_compliance.py  test_compliance_verification.py  test_config.py  test_config_doctor.py  test_config_schema.py  test_contacts.py  test_dashboard.py  test_data_sources.py  test_deployment_specs.py  test_enrichment.py  test_enrichment_async.py  test_enrichment_validators.py  test_entity_resolution.py  test_error_handling.py  test_evidence.py  test_formatting.py  test_geospatial.py  test_lineage.py  test_linkage.py  test_ml_tracking.py  test_observability.py  test_orchestration.py  test_pipeline.py  test_pipeline_enhanced.py  test_pipeline_enhancements_exports.py  test_pipeline_stages.py  test_quality.py  test_scoring.py  test_secrets.py  test_telemetry_bootstrap.py  test_telemetry_registry.py  test_validation_checkpoints.py  (+1 more)
tools/: profile_lint.py
(+436 files in other folders)
